Nodes: Copy-pasting nodes makes many active nodes #108049

Closed
opened 2023-05-18 15:54:49 +02:00 by Iliya Katushenock · 8 comments

Blender Version
Broken: Current main.
Worked: Never.

Short description of error

  • Selection - flag of all nodes (objects), for apply some transformations on all of this.
    Move nodes.
    Copy nodes.
    Change property on multiple node synchrony.
    ...
  • Active - is pointer to currently processed node.
    It node properties displaed in N-panel:
    image
    It node renamed by opertor:
    image
    ...

This report combine some other reports:

Exact steps for others to reproduce the error

  1. Go to node tree.
  2. Create some node.
  3. Duplicate this node: Press Ctrl + C, Ctrl + V.
  4. Press A.
    Look at many active nodes, instead of one active (new one) and old one selected only.
    Same in python api: bpy.data.node_groups[0].nodes.activ (it display jast only first active one).
    Same in property panel.
**Blender Version** Broken: Current main. Worked: Never. **Short description of error** - Selection - flag of all nodes (objects), for apply some transformations on all of this. Move nodes. Copy nodes. Change property on multiple node synchrony. ... - Active - is _pointer_ to currently processed node. It node properties displaed in N-panel: ![image](/attachments/4333e48b-0b4e-4631-b7a5-5d94f44ee210) It node renamed by opertor: ![image](/attachments/9f35abe4-9645-419b-8ccd-2060b69858b5) ... This report combine some other reports: - https://projects.blender.org/blender/blender/issues/108028 - https://projects.blender.org/blender/blender/issues/108036 - Also old one (about n-panel, i didn't find it). **Exact steps for others to reproduce the error** 1. Go to node tree. 2. Create some node. 3. Duplicate this node: Press `Ctrl` + `C`, `Ctrl` + `V`. 4. Press `A`. Look at many _active_ nodes, instead of one active (new one) and old one _selected_ only. Same in python api: `bpy.data.node_groups[0].nodes.activ` (it display jast only first active one). Same in property panel.
Iliya Katushenock self-assigned this 2023-05-18 15:55:27 +02:00
Iliya Katushenock changed title from Npdes: Activity is ignored, selection used as active state of node to Nodes: Activity is ignored, selection used as active state of node 2023-05-18 15:56:29 +02:00
Iliya Katushenock added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-05-18 15:58:37 +02:00
Iliya Katushenock removed the
Interest
Nodes & Physics
label 2023-05-18 16:02:13 +02:00
Iliya Katushenock added this to the Nodes & Physics project 2023-05-18 16:02:17 +02:00
Member

I think #108036 described pretty well a scenario that could be considered a bug.
But what is the actual bug in this report?

Discussions about active vs. selected have been around for ages, see #82359 for example, dont think we have to open another report for this discussion?

I think #108036 described pretty well a scenario that could be considered a bug. But what is the actual bug in this report? Discussions about `active` vs. `selected` have been around for ages, see #82359 for example, dont think we have to open another report for this discussion?
Philipp Oeser added
Status
Needs Information from User
and removed
Status
Confirmed
labels 2023-05-19 14:27:23 +02:00
Author
Member

Rechecking everything now... seems like I misunderstood the bug.
I will describe it like this: duplication of nodes can lead to a situation where you have several active nodes:
image

Initially, I mistook this for the fact that the selection in the principle is incorrect.
I decided to combine all the reports related to this, so that it would be easier to describe the problem. Normally I would just edit one original

Rechecking everything now... seems like I misunderstood the bug. I will describe it like this: duplication of nodes can lead to a situation where you have several active nodes: ![image](/attachments/ab440f02-ce4a-4e38-9120-91a375791dd9) Initially, I mistook this for the fact that the selection in the principle is incorrect. I decided to combine all the reports related to this, so that it would be easier to describe the problem. Normally I would just edit one original
Member

Again: #108036 described this pretty well (had reproduction steps etc.)
Regarding this report:

duplication of nodes can lead to a situation where you have several active nodes

How do you get to the state of your screenshot?
I cant seem to repro, I only ever get one node with a white outline...

Again: #108036 described this pretty well (had reproduction steps etc.) Regarding this report: > duplication of nodes can lead to a situation where you have several active nodes How do you get to the state of your screenshot? I cant seem to repro, I only ever get one node with a white outline...
Author
Member

I did not set out to describe the steps here, sorry. I initially followed the behavior trail (selection is always considered an activity (which turned out to be just a consequence of duplication)).
And in this context, I saw it as: hey, we have a strange behavior that seems to be noticed by everyone. If no one minds, I'll fix it.

But seeing now that I was on the wrong track, it might make sense to change the report a bit.

I did not set out to describe the steps here, sorry. I initially followed the behavior trail (selection is always considered an activity (which turned out to be just a consequence of duplication)). And in this context, I saw it as: hey, we have a strange behavior that seems to be noticed by everyone. If no one minds, I'll fix it. But seeing now that I was on the wrong track, it might make sense to change the report a bit.
Iliya Katushenock changed title from Nodes: Activity is ignored, selection used as active state of node to Nodes: Duplicating nodes makes many active nodes 2023-05-19 15:17:51 +02:00
Iliya Katushenock added
Status
Confirmed
and removed
Status
Needs Information from User
labels 2023-05-19 15:22:57 +02:00
Iliya Katushenock removed this from the Nodes & Physics project 2023-05-19 15:28:04 +02:00
Iliya Katushenock added the
Module
Nodes & Physics
label 2023-05-19 15:28:07 +02:00
Member

There is technically never gonna be multiple "active" nodes, the "multiple actives" is tagged on the node but theres another "active" inside space data. maybe both are needed, but obviously they need to be in sync

There is technically never gonna be multiple "active" nodes, the "multiple actives" is tagged on the node but theres another "active" inside space data. maybe both are needed, but obviously they need to be in sync
Member

Just to be clear:

  • I can repro for Ctrl C Ctrl V copy-paste (seeing multiple active nodes there)
  • I cannot repro for Shift D (only ever get one active node then)

@ChengduLittleA , @mod_moder : are you really getting this for Shift D as well?

Just to be clear: - I can repro for `Ctrl C Ctrl V` copy-paste (seeing multiple active nodes there) - I **cannot** repro for `Shift D` (only ever get one active node then) @ChengduLittleA , @mod_moder : are you really getting this for Shift D as well?
Philipp Oeser added
Status
Needs Information from User
and removed
Status
Confirmed
labels 2023-06-02 11:05:10 +02:00
Author
Member

That's right, the second can be removed from the description

That's right, the second can be removed from the description
Member

@lichtwerk Nope only ctrl c/v has this problem.

@lichtwerk Nope only ctrl c/v has this problem.
Philipp Oeser was assigned by Iliya Katushenock 2023-06-03 12:26:26 +02:00
Iliya Katushenock removed their assignment 2023-06-03 12:26:30 +02:00
Philipp Oeser changed title from Nodes: Duplicating nodes makes many active nodes to Nodes: Copy-pasting nodes makes many active nodes 2023-06-05 09:37:22 +02:00
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Information from User
labels 2023-06-05 09:37:28 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-18 12:22:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108049
No description provided.