Fix: Nodes pasting can leave multiple active nodes

Clear active flag on pasted nodes (this is in line with how objects are
pasted).

Could alternatively be handled in node_copy_with_mapping?

Part of #108049